syntax = "proto3";

package ProductApi;

service ProductGrpc {
   rpc CreateProduct (CreateProductRequest) returns (ProductResponse);
   rpc GetProducts (GetProductsRequest) returns (ProductsResponse);
   rpc DeleteProduct (DeleteProductRequest) returns (DeleteProductResponse);
}

message CreateProductRequest {
  string name = 1;
  string Description = 2;
  double Price = 3;
  string Category = 4; 
  int32 Stock = 5;
}

message GetProductsRequest {}

message DeleteProductRequest {
  int32 id = 1;
}

message ProductResponse {
  int32 id = 1;
  string name = 2;
  string Description = 3;
  double Price = 4;
  string Category = 5; 
  int32 Stock = 6;
}

message ProductsResponse {
  repeated ProductResponse Products = 1;
}

message DeleteProductResponse {
  bool success = 1;
}